[package]
name = "vers-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vers_py"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0.15"
pyo3 = "0.19.0"
vers = { version = "0.1.0", path = "../vers" }
