[package]
name = "vers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dashmap = "5.5.3"
itertools = "0.12.0"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_arrays = "0.1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false